--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,9 @@ Depends:
     R (>= 2.10)
 Imports: 
     glue,
-    stringr
+    stringr,
+    tools,
+    utils
 Suggests: 
     knitr,
     rmarkdown,
