--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,8 @@
 export(check_coordinates)
 export(check_plus_in_primary_fur_color)
 export(get_df_nrows)
+export(save_as_csv)
 importFrom(glue,glue)
 importFrom(stringr,str_detect)
+importFrom(tools,file_ext)
+importFrom(utils,write.csv2)
